# rictr

./: pyproject.toml
rictr/: __init__.py
rictr/core/: __init__.py  distiller.py  state.py  trainer.py
rictr/integrations/: accelerate.py  huggingface.py
rictr/losses/: __init__.py  attention.py  base.py  kl.py
rictr/metrics/: __init__.py  loss.py  perplexity.py
rictr/strategies/: __init__.py  base.py  hidden.py  hybrid.py  logit.py  soft_target.py
rictr/utils/: logging.py  typing.py
